# scry

./: .gitignore  Cargo.toml  README.md  TESTING.md  test_logs.sh
src/: app.rs  config.rs  input_source.rs  keyboard.rs  main.rs  openai.rs  plugins.rs  utils.rs  views.rs
