[package]
name = "scry"
version = "0.1.0"
edition = "2021"
license = "Unlicense"
authors = ["williamkehl"]
repository = "https://github.com/williamkehl/scry"

[dependencies]
ratatui = "0.27"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
atty = "0.2"
dirs = "5"
ctrlc = "3"
libc = "0.2"

